@@ -1561,9 +1561,17 @@ AjPStr ajFileGetName (const AjPFile thys) {
 
 AjBool ajFileStat(AjPStr *fname, ajint mode)
 {
+#if defined (HAVE64)
+    struct stat64 buf;
+#else
     struct stat buf;
+#endif
 
+#if defined (HAVE64)
+    if(!stat64(ajStrStr(*fname), &buf))
+#else
     if(!stat(ajStrStr(*fname), &buf))
+#endif
 	if((ajuint)buf.st_mode & mode)
 	    return ajTrue;
 
@@ -1581,10 +1589,19 @@ AjBool ajFileStat(AjPStr *fname, ajint mode)
 
 ajlong ajFileLength(AjPStr fname)
 {
+#if defined (HAVE64)
+    struct stat64 buf;
+#else
     struct stat buf;
+#endif
 
+#if defined (HAVE64)
+    if(!stat64(ajStrStr(fname), &buf))
+	return (ajlong)buf.st_size;
+#else
     if(!stat(ajStrStr(fname), &buf))
 	return (ajlong)buf.st_size;
+#endif
 
     return -1;
 }
@@ -1880,7 +1897,11 @@ AjPFileBuff ajFileBuffNewF (FILE* fp) {
 AjPFileBuff ajFileBuffNewDW (const AjPStr dir, const AjPStr wildfile) {
 
   DIR* dp;
+#if defined (HAVE64)
+  struct dirent64 *de;
+#else
   struct dirent* de;
+#endif
   ajint dirsize;
   AjPList list = NULL;
   AjPStr name = NULL;
@@ -1900,7 +1921,11 @@ AjPFileBuff ajFileBuffNewDW (const AjPStr dir, const AjPStr wildfile) {
 
   dirsize = 0;
   list = ajListstrNew ();
+#if defined (HAVE64)
+  while ((de = readdir64(dp))) {
+#else
   while ((de = readdir(dp))) {
+#endif
     if (!de->d_ino) continue;	/* skip deleted files with inode zero */
     if (!ajStrMatchWildCO(de->d_name, wildfile)) continue;
     dirsize++;
@@ -1989,7 +2014,11 @@ AjPFileBuff ajFileBuffNewDF (const AjPStr dir, const AjPStr filename) {
 AjPFile ajFileNewDW (const AjPStr dir, const AjPStr wildfile) {
 
   DIR* dp;
+#if defined (HAVE64)
+  struct dirent64 *de;
+#else
   struct dirent* de;
+#endif
   ajint dirsize;
   AjPList list = NULL;
   AjPStr name = NULL;
@@ -2009,7 +2038,12 @@ AjPFile ajFileNewDW (const AjPStr dir, const AjPStr wildfile) {
 
   dirsize = 0;
   list = ajListstrNew ();
+
+#if defined (HAVE64)
+  while ((de = readdir64(dp))) {
+#else
   while ((de = readdir(dp))) {
+#endif
     if (!de->d_ino) continue;	/* skip deleted files with inode zero */
     if (!ajStrMatchWildCO(de->d_name, wildfile)) continue;
     dirsize++;
@@ -3198,7 +3232,11 @@ ajint ajFileScan(AjPStr path, AjPStr filename, AjPList *result,
     AjPList dirs=NULL;
     AjIList iter=NULL;
     DIR *indir;
+#if defined (HAVE64)
+    struct dirent64 *dp;
+#else
     struct dirent *dp;
+#endif
     AjPStr s=NULL;
     AjPStr t=NULL;
     AjBool flag;
@@ -3235,7 +3273,11 @@ ajint ajFileScan(AjPStr path, AjPStr filename, AjPList *result,
     s = ajStrNew();
     dirs = ajListNew();
 
+#if defined (HAVE64)
+    while((dp=readdir64(indir)))
+#else
     while((dp=readdir(indir)))
+#endif
     {
 	if(!dp->d_ino || !strcmp(dp->d_name,".") || !strcmp(dp->d_name,".."))
 	    continue;
@@ -3428,7 +3470,11 @@ AjBool ajFileDirTrim (AjPStr* name)
 
 char* ajFileTempName(const char *dir)
 {
+#if defined (HAVE64)
+    struct  stat64 buf;
+#else
     struct  stat buf;
+#endif
     static  AjPStr  dt=NULL;
     AjPStr  direct;
     ajint     retry;
@@ -3454,7 +3500,11 @@ char* ajFileTempName(const char *dir)
     retry = 5;
     ok    = ajTrue;
 
+#if defined (HAVE64)
+    while(!stat64(ajStrStr(dt),&buf) && retry)
+#else
     while(!stat(ajStrStr(dt),&buf) && retry)
+#endif
     {
 	ajFmtPrintS(&dt,"%S%s-%d.%d",direct,ajAcdProgram(),time(0),
 		    ajRandomNumber());
